--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <!--navigation-->
         <header>
-            <h1>RUN BUDDY</h1>
+            <h1><a href='/'>RUN BUDDY</h1></a>
             <nav>
                 <ul>
                     <!--list item element-->
@@ -22,7 +22,7 @@
                         <a href='#your-trainers'>Your Trainers</a>
                     </li>
                     <li>
-                        <a href='#reach-out'>Reach Out</a>
+                        <a href='#reach-out'>Reach Out</a>                         
                     </li>
                 </ul>
             </nav>
