--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset='UTF-8'/>
         <title>Run Buddy</title>
+        <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
         <!--navigation-->
         <header>
-            <h1><a href='/'>RUN BUDDY</h1></a>
+            <h1>RUN BUDDY</h1>
             <nav>
                 <ul>
                     <!--list item element-->
