--- a/index.html
+++ b/index.html
@@ -143,12 +143,10 @@
 
          <!--"reach out" section-->
          <section id="reach-out" class="contact">
-            <h2 class="section-title secondary-border">Reach Out</h2>
+            <h2 class="section-title secondary-border contact-info">Reach Out</h2>
              <div class="contact-info">
                 <iframe 
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3577.569282111746!2d-81.77278468458314!3d26.27563899354882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88db1c07084b2629%3A0xa63853bd81640ff9!2s148%20Cypress%20Way%20E%2C%20Naples%2C%20FL%2034110!5e0!3m2!1sen!2sus!4v1646103007424!5m2!1sen!2sus" 
-                width="400" 
-                height="400" 
                 style="border:0;" 
                 allowfullscreen="" 
                 loading="lazy">
