--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 
         <!--hero/jumbotron-->
         <section class="hero">
+            <div class="hero-cta">
+                <h2>Start Building Habits</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, quae. Maxime modi pariatur esse nemo porro. Praesentium accusantium libero id, magni corporis doloribus cum quo delectus culpa esse neque in!
+                </p>
+            </div>
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
